refactoring index, script generators

--- a/index.html
+++ b/index.html
@@ -5,3 +5,7 @@
 
 <!-- Simply set the `src` attribute to your MD file and win -->
 <zero-md src="Installing.md"></zero-md>
+
+<zero-md src="Checkpoints.md"></zero-md>
+
+<zero-md src="rcS_Scripts.md"></zero-md>
