--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
 <script type="module" src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@1/src/zero-md.min.js"></script>
 
 <!-- Simply set the `src` attribute to your MD file and win -->
-<zero-md src="Installing.md"></zero-md>
 
-<zero-md src="Checkpoints.md"></zero-md>
-
-<zero-md src="rcS_Scripts.md"></zero-md>
+<div>
+    <zero-md src="Installing.md"></zero-md>
+</div>
+<br>
+<hr>
+<div>
+    <zero-md src="rcS_Scripts.md"></zero-md>
+</div>
+<hr>
+<div>
+    <zero-md src="Checkpoints.md"></zero-md>
+</div>
